<resources>
    <string name="app_name">PetProjectJus</string>
    <string name="popular">Популярные</string>
    <string name="all_movie"><![CDATA[Все >]]></string>
    <string name="movie_poster">Постер фильма</string>
    <string name="film_name">Название фильма</string>
    <string name="movie_genre">Жанр фильма</string>
    <string name="now_in_theatres">Сейчас в кино</string>
    <string name="trending">В Тренде</string>
    <string name="top_rated">Топ Рейтинга</string>
    <string name="upcoming">Скоро выйдут</string>
    <string name="sign"><![CDATA[>]]></string>
    <string name="login">Авторизация</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="movie">Movie</string>
    <string name="tv_show">TV Show</string>
    <string name="celebrity">Celebrity</string>
    <string name="search">Search</string>
    <string name="account">Account</string>
    <string name="airing_today">Сегодня в эфире</string>
    <string name="celebrity_name">Имя человека</string>
    <string name="celebrity_work">Актер</string>
    <string name="celebrity_image">Аватарка человека</string>
    <string name="people_name">Имя человека</string>
    <string name="people_work">Актер</string>
    <string name="vote">20000</string>
    <string name="movie_rating">7</string>
    <string name="star">star</string>
    <string name="movie_description">Описание фильма</string>
    <string name="cast_amp_crew"><![CDATA[Cast&Crew]]></string>
    <string name="video">Video</string>
    <string name="information">Информация</string>
    <string name="date_release">Дата релиза</string>
    <string name="language">Оригинальный язык</string>
    <string name="budget">Бюджет</string>
    <string name="revenue">Сборы</string>
    <string name="production">Производство</string>
    <string name="recommendation">Рекомендуемые к просмотру</string>
    <string name="similar">Похожие</string>
    <string name="collection">Коллекция</string>
</resources>