<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal">

    <androidx.cardview.widget.CardView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="5dp"
        app:cardCornerRadius="5dp">
        <ImageView
            android:id="@+id/movie_image"
            android:scaleType="centerCrop"
            tools:srcCompat="@tools:sample/avatars"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/movie_poster"/>
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/movie_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/film_name"
            android:gravity="start"
            android:maxLines="2"
            android:textStyle="italic|bold"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/movie_release"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/movie_genre"
            android:gravity="start"
            android:maxLines="1"
            android:textStyle="italic|bold"
            android:textColor="@color/grey"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/sign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="8dp"
        android:text="@string/sign"
        android:layout_gravity="center"
        android:maxLines="1"
        android:textStyle="italic|bold"
        android:textColor="@color/grey"/>



</LinearLayout>