<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <androidx.cardview.widget.CardView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        app:cardCornerRadius="5dp">

        <ImageView
            android:id="@+id/movie_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/movie_poster"
            android:scaleType="centerCrop"
            tools:srcCompat="@tools:sample/avatars" />
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/movie_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:gravity="start"
            android:maxLines="2"
            android:text="@string/film_name"
            android:textColor="@color/white"
            android:textStyle="italic|bold" />

        <TextView
            android:id="@+id/movie_release"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="start"
            android:maxLines="1"
            android:text="@string/movie_genre"
            android:textColor="@color/grey"
            android:textStyle="italic|bold" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatRatingBar
                android:id="@+id/ratingBar"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:max="5"
                android:rating="3.5"
                android:scaleX=".7"
                android:scaleY=".7"
                android:transformPivotX="0dp"
                android:transformPivotY="0dp" />

            <TextView
                android:id="@+id/vote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vote"
                android:textColor="@color/teal_200"
                android:textStyle="italic" />

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/sign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="8dp"
        android:maxLines="1"
        android:text="@string/sign"
        android:textColor="@color/grey"
        android:textStyle="italic|bold" />


</LinearLayout>