<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="5dp">
        <ImageView
            android:id="@+id/movie_image"
            android:scaleType="centerCrop"
            tools:srcCompat="@tools:sample/avatars"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/movie_poster"/>
    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/movie_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/film_name"
        android:gravity="start"
        android:maxLines="2"
        android:textStyle="italic|bold"
        android:textSize="16sp"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/movie_genre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/movie_genre"
        android:gravity="start"
        android:maxLines="1"
        android:textStyle="italic"
        android:textColor="@color/grey"/>


</LinearLayout>