<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:orientation="horizontal">

    <androidx.cardview.widget.CardView
        android:layout_width="54dp"
        android:layout_height="54dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="100dp">

        <androidx.cardview.widget.CardView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            app:cardCornerRadius="100dp">

            <ImageView
                android:id="@+id/celebrity_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/celebrity_image"
                android:scaleType="centerCrop"
                tools:srcCompat="@tools:sample/avatars" />

        </androidx.cardview.widget.CardView>

    </androidx.cardview.widget.CardView>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/celebrity_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="start"
            android:maxLines="2"
            android:text="@string/people_name"
            android:textColor="@color/white"
            android:textStyle="italic|bold" />

        <TextView
            android:id="@+id/celebrity_work"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="start"
            android:maxLines="1"
            android:text="@string/people_work"
            android:textColor="@color/grey"
            android:textStyle="italic|bold" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/sign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="8dp"
        android:maxLines="1"
        android:text="@string/sign"
        android:textColor="@color/grey"
        android:textStyle="italic|bold" />


</LinearLayout>