<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".presentation.movie.MovieFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/popular_movie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:text="@string/popular"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/all_popular_movie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/all_movie"
                    android:textColor="@color/grey"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </FrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_popular_movies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <FrameLayout
                android:id="@+id/playing_now_movie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:text="@string/now_in_theatres"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/all_playing_now_movie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/all_movie"
                    android:textColor="@color/grey"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </FrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_playing_now_movies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <FrameLayout
                android:id="@+id/trending_movie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:text="@string/trending"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/all_trending_movie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/all_movie"
                    android:textColor="@color/grey"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </FrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_trending_movies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <FrameLayout
                android:id="@+id/top_rated_movie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:text="@string/top_rated"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/all_top_rated_movie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/all_movie"
                    android:textColor="@color/grey"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </FrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_top_rated_movies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="horizontal"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="4"/>

            <FrameLayout
                android:id="@+id/upcoming_movie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:text="@string/upcoming"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/all_upcoming_movie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/all_movie"
                    android:textColor="@color/grey"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </FrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_upcoming_movies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        </androidx.appcompat.widget.LinearLayoutCompat>



    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>